--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React ¿¿¿¿ 222</title>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500,700" rel="stylesheet">
+
+    <title>Flashcard Blastcard!</title>
   </head>
   <body>
     <div id="root"></div>
